vlib/v/checker/tests/inout/shift_op_wrong_left_type_err.out
vlib/v/checker/tests/inout/shift_op_wrong_left_type_err.v:2:2: error: cannot shift type int into non-integer type f64
    1| fn main() {
    2|     0.5 << 1
           ~~~
    3| }
